--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   --purple3: #694873;
   --purple2: #8b728e;
   --purple1: #b5a4b6;
+  --purple0: #f6f4f6;
   --dark-grey: #1f1f1f;
   --light-grey: #cccccc;
   --white: #fff;
@@ -176,6 +177,7 @@ html {
   left: -40rem;
   background-color: var(--green1);
   transition: left 0.4s;
+  z-index: 10;
 }
 .change .sidebar {
   left: 0;
@@ -235,3 +237,329 @@ html {
   color: var(--white);
 }
 /* end of sidebar menu */
+/* Over ons */
+.about-us {
+  background-color: var(--purple0);
+}
+.section-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 7rem 0 10rem 0;
+}
+.section-heading {
+  font-family: "Muli", serif;
+  font-size: 5rem;
+  font-weight: 300;
+  color: var(--purple3);
+  margin-bottom: 6rem;
+}
+.underline {
+  width: 12rem;
+  height: 0.3rem;
+  background-color: var(--green1);
+}
+.services {
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(6, 6rem);
+  gap: 4rem;
+}
+.service {
+  width: 100%;
+  margin-bottom: 2rem;
+}
+.service:nth-child(1) {
+  grid-column: 4/7;
+  grid-row: 1/3;
+}
+.service:nth-child(2) {
+  grid-column: 3/6;
+  grid-row: 3/5;
+}
+.service:nth-child(3) {
+  grid-column: 4/7;
+  grid-row: 5/-1;
+}
+.service:nth-child(4) {
+  grid-column: 11/14;
+  grid-row: 1/3;
+}
+.service:nth-child(5) {
+  grid-column: 12/15;
+  grid-row: 3/5;
+}
+.service:nth-child(6) {
+  grid-column: 11/14;
+  grid-row: 5/-1s;
+}
+.service-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.service-header i {
+  font-size: 4rem;
+  color: var(--green1);
+  margin-right: 2rem;
+}
+.service-header h3 {
+  font-family: "Baloo Da 2", serif;
+  font-size: 2.5rem;
+  font-weight: 300;
+  color: var(--purple3);
+  margin-bottom: 2rem;
+}
+.service-text {
+  font-family: "Josefin Slab", serif;
+  font-size: 1.6rem;
+  color: var(--purple3);
+}
+.about-us-img-wrapper {
+  grid-column: 7/11;
+  grid-row: 2/6;
+  width: 100%;
+}
+.about-us-img-wrapper img {
+  width: 100%;
+  object-fit: cover;
+  opacity: 0.8;
+}
+
+/* end of Over ons */
+/* Our team */
+.team {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 5rem 20rem 5rem;
+}
+.cards-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 8rem;
+  width: 100%;
+}
+.card {
+  width: 37rem;
+  height: 45rem;
+  box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.4);
+  border-radius: 0.5rem;
+  position: relative;
+}
+.card-img-wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(133, 183, 157, 0.5);
+  border-radius: 0.5rem;
+}
+.card-img-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.8;
+  border-radius: 0.5rem;
+  transition: opacity 0.3s;
+}
+.card:hover .card-img-wrapper img {
+  opacity: 0.6;
+}
+.card-info {
+  position: absolute;
+  bottom: 0;
+  padding: 2rem;
+  text-shadow: 0 0.2rem 5rem rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+}
+.card:hover .card-info {
+  bottom: 2rem;
+  opacity: 1;
+  visibility: visible;
+}
+.card-info h2 {
+  font-family: "Baloo Da 2", serif;
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+  font-weight: 300;
+  color: var(--white);
+}
+.card-info h3 {
+  font-family: "Muli", serif;
+  font-size: 2rem;
+  font-weight: 700;
+  color: var(--green1);
+  margin-bottom: 1rem;
+}
+.card-info p {
+  font-family: "Baloo Da 2", serif;
+  font-size: 1.4rem;
+  line-height: 1.6rem;
+  font-weight: 300;
+  color: var(--white);
+  margin-bottom: 2rem;
+}
+.card-info button {
+  background-color: var(--green1);
+  font-family: "Baloo Da 2", serif;
+  color: var(--purple3);
+  font-size: 1.6rem;
+  padding: 0.5em 1em;
+  border-radius: 0.5rem;
+  box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+}
+
+/* end of Our team */
+/* Contact */
+.contact {
+  width: 100%;
+  height: 100vh;
+  background-color: var(--white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contact-wrapper {
+  width: 60%;
+  height: 75rem;
+  display: flex;
+  box-shadow: 0 0.2rem 1.5rem rgba(105, 72, 115, 0.7);
+  border-radius: 0.5rem;
+}
+.contact-left {
+  width: 35%;
+  background: linear-gradient(
+      90deg,
+      rgba(192, 229, 200, 0.6138830532212884) 0%,
+      rgba(192, 229, 200, 0.2497373949579832) 72%
+    ),
+    url(images/tushar-sahdev-Os0R9xxAN_U-unsplash.jpeg) center no-repeat;
+  background-size: cover;
+  border-radius: 0.5rem 0 0 0.5rem;
+}
+.contact-right {
+  width: 65%;
+  background-color: var(--white);
+  padding: 3rem 10rem 10rem 10rem;
+  border-radius: 0 0.5rem 0.5rem 0;
+}
+.contact-heading {
+  font-family: "Baloo Da 2", serif;
+  font-size: 6rem;
+  font-weight: 300;
+  color: var(--purple3);
+  margin-bottom: 5rem;
+  text-align: center;
+}
+.contact-right form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.input-group {
+  position: relative;
+}
+.field {
+  width: 40rem;
+  background-color: transparent;
+  border-bottom: 0.2rem dashed var(--purple3);
+  margin: 3rem 0;
+  padding: 1rem 1rem 1rem 0;
+  font-family: "Muli", serif;
+  font-size: 1.6rem;
+  color: var(--purple3);
+}
+.input-group input {
+  height: 4rem;
+}
+.input-group textarea {
+  max-height: 7rem;
+  max-width: 40rem;
+}
+.field:focus {
+  border-bottom-style: solid;
+}
+.input-group label {
+  position: absolute;
+  left: 0;
+  font-family: "Baloo Da 2", serif;
+  font-size: 1.8rem;
+  color: var(--purple1);
+  text-transform: uppercase;
+  pointer-events: none;
+  transition: all 0.3s;
+}
+.input-label {
+  bottom: 3rem;
+}
+.message {
+  bottom: 6rem;
+}
+.field:focus ~ label {
+  transform: translateY(-3rem);
+  font-size: 1.2rem;
+}
+.submit-btn {
+  font-family: "Muli", serif;
+  background-color: var(--purple3);
+  width: 70%;
+  font-size: 2rem;
+  font-weight: 300;
+  padding: 0.5em 1em;
+  border-radius: 0.5rem;
+  box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4);
+  color: var(--white);
+  margin-bottom: 2rem;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+/* end of Contact */
+/* footer */
+.footer {
+  width: 100%;
+  height: 15rem;
+  background-color: var(--purple3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-content {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+}
+.copyright {
+  font-family: "Baloo Da 2", serif;
+  color: var(--white);
+  font-size: 1.6rem;
+}
+.social-list a {
+  margin: 0 2rem;
+}
+.social-list i {
+  font-size: 2rem;
+  color: var(--white);
+}
+.scroll-btn {
+  position: fixed;
+  right: 5rem;
+  bottom: 5rem;
+  width: 4rem;
+  height: 4rem;
+  background-color: var(--green1);
+  border-radius: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.scroll-btn i {
+  color: var(--purple3);
+  font-size: 2.5rem;
+}
+/* end of footer */
