--- a/style.css
+++ b/style.css
@@ -24,8 +24,11 @@
 html {
   font-size: 62.5%;
 }
-
-/* header */
+@media (width: 50rem) {
+  html {
+    font-size: 45%;
+  }
+}
 
 /* hamburger-menu */
 .hamburger__menu {
@@ -41,8 +44,19 @@ html {
   cursor: pointer;
   transition: left 0.7s 0.1s;
 }
+@media (max-width: 70rem) {
+  .hamburger__menu {
+    top: 2rem;
+    left: 2rem;
+  }
+}
 .change .hamburger__menu {
   left: 33rem;
+}
+@media (max-width: 105rem) {
+  .change .hamburger__menu {
+    left: 23rem;
+  }
 }
 .hamburger__menu-line {
   width: 100%;
@@ -92,11 +106,26 @@ html {
   transform: translateY(-50%);
 }
 /* end of hamburger-menu */
-
+/* header */
 .header {
   height: 100vh;
   position: relative;
   overflow: hidden;
+}
+@media (max-width: 105rem) {
+  .header {
+    height: 90vh;
+  }
+}
+@media (max-width: 70rem) {
+  .header {
+    height: 60vh;
+  }
+}
+@media (max-width: 50rem) {
+  .header {
+    height: 50vh;
+  }
 }
 .header__image {
   width: 100%;
@@ -122,18 +151,38 @@ html {
 .header__banner {
   position: absolute;
   top: 30%;
-  right: 0;
+  right: 20%;
+  text-align: right;
 }
 .header__banner h1 {
   font-family: "Baloo Da 2", serif;
   font-size: 8rem;
   font-weight: 200;
   color: var(--white);
-  width: 60%;
   line-height: 1em;
   text-shadow: var(--text-shadow-grey);
   opacity: 0;
   animation: moveBanner 1s 0.5s forwards;
+}
+@media (max-width: 140rem) {
+  .header__banner h1 {
+    font-size: 6rem;
+  }
+}
+@media (max-width: 105rem) {
+  .header__banner h1 {
+    font-size: 5rem;
+  }
+}
+@media (max-width: 70rem) {
+  .header__banner h1 {
+    font-size: 4rem;
+  }
+}
+@media (max-width: 50rem) {
+  .header__banner h1 {
+    font-size: 3rem;
+  }
 }
 .header__banner p {
   font-family: "Josefin Slab", serif;
@@ -143,6 +192,26 @@ html {
   text-shadow: var(--text-shadow-grey);
   opacity: 0;
   animation: moveBanner 1s 0.8s forwards;
+}
+@media (max-width: 140rem) {
+  .header__banner p {
+    font-size: 3rem;
+  }
+}
+@media (max-width: 105rem) {
+  .header__banner p {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 70rem) {
+  .header__banner p {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 50rem) {
+  .header__banner p {
+    font-size: 1.6rem;
+  }
 }
 .header__banner button {
   background-color: var(--purple2);
@@ -158,6 +227,27 @@ html {
   opacity: 0;
   animation: moveBanner 1s 1.1s forwards;
 }
+@media (max-width: 140rem) {
+  .header__banner button {
+    font-size: 1.6rem;
+  }
+}
+@media (max-width: 105rem) {
+  .header__banner button {
+    font-size: 1.4rem;
+  }
+}
+@media (max-width: 70rem) {
+  .header__banner button {
+    font-size: 1.2rem;
+  }
+}
+@media (max-width: 50rem) {
+  .header__banner button {
+    font-size: 1rem;
+  }
+}
+
 @keyframes moveBanner {
   0% {
     transform: translateX(-40rem) rotateY(-20deg);
@@ -179,6 +269,12 @@ html {
   transition: left 0.4s;
   z-index: 10;
 }
+@media (max-width: 105rem) {
+  .sidebar {
+    width: 30rem;
+  }
+}
+
 .change .sidebar {
   left: 0;
 }
@@ -196,6 +292,11 @@ html {
   font-size: 4rem;
   color: var(--purple3);
   position: relative;
+}
+@media (max-width: 140rem) {
+  .menu__link {
+    font-size: 3rem;
+  }
 }
 .menu__link::before {
   content: attr(data-content);
@@ -247,6 +348,11 @@ html {
   align-items: center;
   padding: 7rem 0 10rem 0;
 }
+@media (max-width: 70rem) {
+  .section-header {
+    padding-bottom: 7rem;
+  }
+}
 .section-heading {
   font-family: "Muli", serif;
   font-size: 5rem;
@@ -266,9 +372,28 @@ html {
   grid-template-rows: repeat(6, 6rem);
   gap: 4rem;
 }
+@media (max-width: 105rem) {
+  .services {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .service {
   width: 100%;
   margin-bottom: 2rem;
+}
+@media (max-width: 105rem) {
+  .service {
+    width: 40rem;
+    margin-bottom: 4rem;
+  }
+}
+@media (max-width: 50rem) {
+  .service {
+    width: 30rem;
+    margin-bottom: 3rem;
+  }
 }
 .service:nth-child(1) {
   grid-column: 4/7;
@@ -293,6 +418,26 @@ html {
 .service:nth-child(6) {
   grid-column: 11/14;
   grid-row: 5/-1s;
+}
+@media (max-width: 140rem) {
+  .service:nth-child(1) {
+    grid-column: 3/7;
+  }
+  .service:nth-child(2) {
+    grid-column: 2/6;
+  }
+  .service:nth-child(3) {
+    grid-column: 3/7;
+  }
+  .service:nth-child(4) {
+    grid-column: 11/15;
+  }
+  .service:nth-child(5) {
+    grid-column: 12/16;
+  }
+  .service:nth-child(6) {
+    grid-column: 11/15;
+  }
 }
 .service-header {
   display: flex;
@@ -321,6 +466,17 @@ html {
   grid-row: 2/6;
   width: 100%;
 }
+@media (max-width: 150rem) {
+  .about-us-img-wrapper {
+    grid-row: 3/-1;
+  }
+}
+@media (max-width: 105rem) {
+  .about-us-img-wrapper {
+    width: 40rem;
+    margin-bottom: 6rem;
+  }
+}
 .about-us-img-wrapper img {
   width: 100%;
   object-fit: cover;
@@ -336,11 +492,28 @@ html {
   align-items: center;
   padding: 0 5rem 20rem 5rem;
 }
+@media (max-width: 130rem) {
+  .team {
+    padding-bottom: 5rem;
+  }
+}
 .cards-wrapper {
   display: flex;
   justify-content: space-evenly;
   margin-top: 8rem;
   width: 100%;
+}
+@media (max-width: 130rem) {
+  .cards-wrapper {
+    margin-top: 4rem;
+  }
+}
+@media (max-width: 110rem) {
+  .cards-wrapper {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 4rem;
+  }
 }
 .card {
   width: 37rem;
@@ -348,6 +521,28 @@ html {
   box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.4);
   border-radius: 0.5rem;
   position: relative;
+}
+@media (max-width: 150rem) {
+  .card {
+    width: 32rem;
+  }
+}
+@media (max-width: 130rem) {
+  .card {
+    width: 27rem;
+  }
+}
+@media (max-width: 110rem) {
+  .card {
+    margin-bottom: 8rem;
+    width: 42rem;
+  }
+}
+@media (max-width: 50rem) {
+  .card {
+    margin-bottom: 8rem;
+    width: 35rem;
+  }
 }
 .card-img-wrapper {
   width: 100%;
@@ -430,6 +625,24 @@ html {
   box-shadow: 0 0.2rem 1.5rem rgba(105, 72, 115, 0.7);
   border-radius: 0.5rem;
 }
+@media (max-width: 150rem) {
+  .contact-wrapper {
+    width: 80%;
+    height: 65rem;
+  }
+}
+@media (max-width: 130rem) {
+  .contact-wrapper {
+    width: 90%;
+    height: 55rem;
+  }
+}
+@media (max-width: 70rem) {
+  .contact-wrapper {
+    width: 80%;
+    height: 45rem;
+  }
+}
 .contact-left {
   width: 35%;
   background: linear-gradient(
@@ -441,11 +654,26 @@ html {
   background-size: cover;
   border-radius: 0.5rem 0 0 0.5rem;
 }
+@media (max-width: 105rem) {
+  .contact-left {
+    width: 0;
+  }
+}
 .contact-right {
   width: 65%;
   background-color: var(--white);
   padding: 3rem 10rem 10rem 10rem;
   border-radius: 0 0.5rem 0.5rem 0;
+}
+@media (max-width: 105rem) {
+  .contact-right {
+    width: 100%;
+  }
+}
+@media (max-width: 50rem) {
+  .contact-right {
+    padding: 0 1rem 10rem 1rem;
+  }
 }
 .contact-heading {
   font-family: "Baloo Da 2", serif;
@@ -454,6 +682,11 @@ html {
   color: var(--purple3);
   margin-bottom: 5rem;
   text-align: center;
+}
+@media (max-width: 130rem) {
+  .contact-heading {
+    margin-bottom: 0;
+  }
 }
 .contact-right form {
   width: 100%;
@@ -474,12 +707,47 @@ html {
   font-size: 1.6rem;
   color: var(--purple3);
 }
+@media (max-width: 130rem) {
+  .field {
+    margin: 2rem 0;
+  }
+}
+@media (max-width: 105rem) {
+  .field {
+    width: 55rem;
+  }
+}
+@media (max-width: 70rem) {
+  .field {
+    width: 35rem;
+  }
+}
+@media (max-width: 50rem) {
+  .field {
+    width: 25rem;
+  }
+}
 .input-group input {
   height: 4rem;
 }
 .input-group textarea {
   max-height: 7rem;
   max-width: 40rem;
+}
+@media (max-width: 105rem) {
+  .input-group textarea {
+    max-width: 55rem;
+  }
+}
+@media (max-width: 70rem) {
+  .input-group textarea {
+    max-width: 35rem;
+  }
+}
+@media (max-width: 50rem) {
+  .input-group textarea {
+    max-width: 25rem;
+  }
 }
 .field:focus {
   border-bottom-style: solid;
@@ -518,6 +786,21 @@ html {
   text-transform: uppercase;
   cursor: pointer;
 }
+@media (max-width: 105rem) {
+  .submit-btn {
+    width: 55rem;
+  }
+}
+@media (max-width: 70rem) {
+  .submit-btn {
+    width: 35rem;
+  }
+}
+@media (max-width: 50rem) {
+  .submit-btn {
+    width: 25rem;
+  }
+}
 /* end of Contact */
 /* footer */
 .footer {
@@ -533,10 +816,29 @@ html {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 105rem) {
+  .footer-content {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 50%;
+  }
+}
+@media (max-width: 150rem) {
+  .footer-content {
+    width: 80%;
+  }
+}
 .copyright {
   font-family: "Baloo Da 2", serif;
   color: var(--white);
   font-size: 1.6rem;
+}
+@media (max-width: 105rem) {
+  .copyright {
+    order: 1;
+    margin-top: 3rem;
+  }
 }
 .social-list a {
   margin: 0 2rem;
@@ -557,9 +859,15 @@ html {
   align-items: center;
   display: none;
 }
-
+@media (max-width: 50rem) {
+  .scroll-btn {
+    right: 3rem;
+    bottom: 3rem;
+  }
+}
 .scroll-btn i {
   color: var(--purple3);
   font-size: 2.5rem;
 }
 /* end of footer */
+/* media query */
